fix: removed horizontal scrollbar

--- a/src/components/TwitterChatter/_twitterchatter.scss
+++ b/src/components/TwitterChatter/_twitterchatter.scss
@@ -4,7 +4,6 @@
 
   @media (min-width: 672px) {
     max-height: 216px;
-    overflow: scroll;
   }
 }
 
